2025-04-13  Morten Welinder  <terra@gnome.org>

	* xlsx-read.c: use implied cell addresses ("next cell") when the
	file does not contain addresses.  Fixes #804.

2025-03-01  Morten Welinder <terra@gnome.org>

	* Release 1.12.59

2024-03-13  Morten Welinder  <terra@gnome.org>

	* xlsx-read.c (xlsx_numfmt_common): Ignore attempt to override
	existing formats, notably the implied ones.

2024-02-11  Morten Welinder <terra@gnome.org>

	* Release 1.12.57

2023-11-02  Morten Welinder <terra@gnome.org>

	* Release 1.12.56

2023-02-02  Morten Welinder <terra@gnome.org>

	* Release 1.12.55

2023-01-19  Morten Welinder <terra@gnome.org>

	* Release 1.12.54

2022-12-06  Morten Welinder  <terra@gnome.org>

	* xlsx-read.c (xlsx_set_paper_from_code): Plug leaks.

2022-09-17  Morten Welinder <terra@gnome.org>

	* Release 1.12.53

2022-05-22  Morten Welinder  <terra@gnome.org>

	* xlsx-read.c (xlsx_get_num_fmt): Format 14 is locale dependent.
	* xlsx-write.c (xlsx_load_buildin_num_formats): Ditto.

2022-04-18  Morten Welinder <terra@gnome.org>

	* Release 1.12.52

2022-01-20  Morten Welinder <terra@gnome.org>

	* Release 1.12.51

2021-06-10  Morten Welinder <terra@gnome.org>

	* Release 1.12.50

2021-04-11  Morten Welinder  <terra@gnome.org>

	* xlsx-read.c (xlsx_parse_expr): Turn expressons we cannot parse
	into ERROR("formula") instead of dropping them on the floor.  See
	#574.

2021-03-29  Morten Welinder  <terra@gnome.org>

	* xlsx-read.c (xlsx_CT_HyperLinks): Also handle file:// links.
	* xlsx-write.c (xlsx_write_hlink): Ditto.

2021-03-14  Morten Welinder <terra@gnome.org>

	* Release 1.12.49

2020-08-12  Morten Welinder <terra@gnome.org>

	* Release 1.12.48

2020-05-27  Jean Brefort  <jean.brefort@normalesup.org>

	* xlsx-read-drawing.c (xlsx_draw_clientdata): don't set the print
	flag if we do not import the object.

2020-05-09  Morten Welinder <terra@gnome.org>

	* Release 1.12.47

2020-05-09  Morten Welinder  <terra@gnome.org>
