@@ -1,3 +1,7 @@
+2026-01-10  Morten Welinder  <terra@gnome.org>
+
+	* md5.c (md5_process_block): Use libgsf for byte order stuff.
+
 2025-04-13  Morten Welinder  <terra@gnome.org>
 
 	* xlsx-read.c: use implied cell addresses ("next cell") when the
